--- a/src/public/css/confirm.css
+++ b/src/public/css/confirm.css
@@ -1,26 +1,3 @@
-header {
-    background-color: skyblue;
-}
-
-.header_inner {
-    max-width: 1000px;
-    padding: 30px;
-}
-
-.header_logo {
-    color: white;
-    font-size: 24px;
-    text-decoration: none;
-}
-
-h2 {
-    width: 463px;
-    text-align: center;
-    margin: 10px auto;
-    padding: 10px;
-    font-weight: normal;
-}
-
 form {
     width: fit-content;
     margin: 0 auto;
@@ -61,9 +38,14 @@ p {
     cursor: pointer;
     border-radius: 7px;
     box-shadow: 0 6px 0 black;
+    opacity: 0.7;
 }
 
 .form_button:active {
     box-shadow: none;
     transform: translateY(6px);
+}
+
+.form_button:hover {
+    opacity: 1;
 }
