--- a/src/public/css/input.css
+++ b/src/public/css/input.css
@@ -1,26 +1,3 @@
-header {
-    background-color: skyblue;
-}
-
-.header_inner {
-    max-width: 1000px;
-    padding: 30px;
-}
-
-.header_logo {
-    color: white;
-    font-size: 24px;
-    text-decoration: none;
-}
-
-h2 {
-    width: 463px;
-    text-align: center;
-    margin: 10px auto;
-    padding: 10px;
-    border-bottom: gainsboro solid 3px;
-}
-
 form {
     width: fit-content;
     height: 900px;
@@ -49,7 +26,7 @@ span {
     margin-bottom: 30px;
 }
 
-.form_error{
+.form_error {
     color: red;
 }
 
@@ -63,9 +40,14 @@ span {
     cursor: pointer;
     border-radius: 7px;
     box-shadow: 0 6px 0 black;
+    opacity: 0.7;
 }
 
 .form_button:active {
     box-shadow: none;
     transform: translateY(6px);
+}
+
+.form_button:hover {
+    opacity: 1;
 }
